--- a/.gitconfig
+++ b/.gitconfig
@@ -3,16 +3,19 @@
   email = ahmed@monbanquet.fr
 
 [github]
-  user = ahmedboustani
+  user = AhmedBoustani
   email = ahmed.a.boustani@gmail.com
-  token = <token>
+  token = <token-stuff>
 
 [core]
   editor = vim
+	pager = less -F -X
 
 [alias]
   lg = log --pretty=format:\"%C(yellow)%h%Creset - %C(red)%an%Creset, %C(green)%ar%Creset : %C(white)%s%Creset\"
   graph = log --graph --oneline --decorate=short --branches='*'
+  co = checkout
+  cob = checkout -b
 
 [color]
   ui = auto
@@ -30,3 +33,6 @@
   added = green bold
   changed = yellow bold
   untracked = red bold
+
+[http]
+	postBuffer = 1048576000
