update gitconfig tmuxconf vimrc and zshrc

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = aab11
-  email = ahmed@monbanquet.fr
+  name = aab13
+  email = ahmed.a.boustani@gmail.com
 
 [github]
   user = AhmedBoustani
