--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,6 @@
 set-option -g prefix C-a
 set-option -g default-terminal xterm-256color
+
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
